--- a/LoadInternetFile/AuthPage.xaml
+++ b/LoadInternetFile/AuthPage.xaml
@@ -13,6 +13,6 @@
         <TextBox Name="login" HorizontalAlignment="Left" Height="23" Margin="89,101,0,0" TextWrapping="Wrap" Text="dlpuser@dlptest.com" VerticalAlignment="Top" Width="120"/>
         <TextBox Name="password" HorizontalAlignment="Left" Height="23" Margin="89,147,0,0" TextWrapping="Wrap" Text="eiTqR7EMZD5zy7M" VerticalAlignment="Top" Width="120"/>
         <Button Content="Connect" HorizontalAlignment="Left" Margin="107,208,0,0" VerticalAlignment="Top" Width="75" Click="ConnectClick"/>
-        <CheckBox Content="Safe" HorizontalAlignment="Left" Margin="24,254,0,0" VerticalAlignment="Top"/>
+        <CheckBox Name="checkSafe" Content="Safe" HorizontalAlignment="Left" Margin="24,254,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Page>
